hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_non_static_member_02.php.exp
File "protected_non_static_member_02.php", line 29, characters 12-13:
No instance method `me` in `Tw` (Typing[4053])
  File "protected_non_static_member_02.php", line 27, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_02.php", line 26, characters 7-8:
  This is why I think it is an object of type Tw
  File "protected_non_static_member_02.php", line 26, characters 7-8:
  Declaration of `Tw` is here
File "protected_non_static_member_02.php", line 29, characters 12-13:
You cannot access this member (Typing[4112])
  File "protected_non_static_member_02.php", line 20, characters 20-21:
  This member is private
File "protected_non_static_member_02.php", line 38, characters 12-13:
No instance method `me` in `Tw2` (Typing[4053])
  File "protected_non_static_member_02.php", line 36, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_02.php", line 33, characters 7-9:
  This is why I think it is an object of type Tw2
  File "protected_non_static_member_02.php", line 33, characters 7-9:
  Declaration of `Tw2` is here
